fix color contrast issue, groop page layout on mobile, color of inputs more acccessible

--- a/src/routes/GroupPageRoute/GroupPageRoute.scss
+++ b/src/routes/GroupPageRoute/GroupPageRoute.scss
@@ -22,8 +22,8 @@
   flex-direction: column;
   align-items: center;
   padding-top: 35px;
+  width: 100%;
   color: rgb(226, 226, 226);
-  padding-left: 200px;
 }
 
 .groop-page h2 {
@@ -31,7 +31,7 @@
   padding-bottom: 0px;
   margin-bottom: 0px;
   margin-top: 0;
-  font-family: $font-Family-other
+  font-family: $font-Family-other;
 }
 
 .members-section {
@@ -111,6 +111,12 @@
   font-size: 1.2rem;
   margin: 0 auto;
 }
+
+@media screen and (min-width: 800px) {
+  .groop-page {
+    padding-left: 200px;
+  }
+}
 @media screen and (min-width: 1200px) {
   .groop-page {
     padding-top: 30px;
@@ -137,7 +143,6 @@
     border-top-right-radius: 5px;
     border-top-left-radius: 5px;
     margin-bottom: 0px;
-    
   }
   .task-list {
     width: 100%;
@@ -148,7 +153,7 @@
     color: $color-font-offwhite;
     width: 100%;
   }
-  
+
   #label-menu {
     display: inherit;
     font-size: 18px;
@@ -169,7 +174,7 @@
   .menu li {
     font-size: 16px;
     line-height: 1.5rem;
-    margin: 0.25rem .25rem;
+    margin: 0.25rem 0.25rem;
   }
   .scores-section {
     display: flex;
