--- a/src/variables.scss
+++ b/src/variables.scss
@@ -3,19 +3,19 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa');
 
 $color-font-header: #ffffff;
-$color-font-offwhite: #ffffff99;
+$color-font-offwhite: #fafafa;
 $color-link: #262626;
-$color-secondary: rgb(25, 144, 199);
+$color-secondary: #095097;
 
-$color-bg-main1: #1F2023;
-$color-bg-main:#1b1b1d;
-$color-bg-main2: #27292D;
+$color-bg-main1: #1f2023;
+$color-bg-main: #1b1b1d;
+$color-bg-main2: #27292d;
 $color-bg-main3: #2d2f34;
 $color-bg-main4: #383840;
 $color-bg-main5: #6a6a75;
 $color-bg-main6: #81818b;
 
-$color-bg-secondary: #0D0D0D;
+$color-bg-secondary: #0d0d0d;
 
 $color-error: #b13232;
 $color-success: #136e29;
